--- a/src/main/webapp/gainPoint/gainPointForm.html
+++ b/src/main/webapp/gainPoint/gainPointForm.html
@@ -17,7 +17,7 @@
 				name <input type="text" name ="name" onclick="return showCalendar(this, '%Y-%m-%d', true);"/>
 			</td>
 			<td>
-				cnName <input type="text" name ="cnName" onfocus="popWin(this)" />
+				cnName <input type="text" name ="cnName" />
 			</td>
 			<td>
 				address <input type="text" name ="address" />
@@ -35,7 +35,7 @@
 		fieldElement.value=obj.value;
 	}
 
-	popWin = function(element){
+	function popWin(element){
 		var url = '<spen jwcid="@PageLink" page="widget/WinSelectionListPage" renderer="ognl:renderer"/>';
 		initWindowDialog(element,"test Title",url,"selectRecord");
 	}
