增加selectbox再次增加功能
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@4164 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/selectbox/SelectBox.html
+++ b/src/main/webapp/selectbox/SelectBox.html
@@ -63,6 +63,12 @@
           </td>
         </tr>
       </table>
+<script type="text/javascript">
+<!--
+	var newFormSource = {"111111":"北京","555555":"杭州","666666":"深圳","777777":"厦门"};
+// -->
+</script>
+            <a href="javascript:SelectBox2_0_fun.formAdds(newFormSource)">增加</a><br/>
       <input jwcid="@Submit" type="Submit" value="message:button.Okay"/>
       <input jwcid="@Any" type="Button" value="message:button.Cancle" onClick="javascript:tapestry.form.cancel(this.form);"/>
     </form>
