--- a/src/test/resources/corner/selectBox/test_select.html
+++ b/src/test/resources/corner/selectBox/test_select.html
@@ -53,7 +53,8 @@ djConfig = { isDebug: true };
             </table>
 <script type="text/javascript">
 <!--
-	var newFormSource = {"111111":"北京","555555":"杭州","666666":"深圳","777777":"厦门};
+	dojo.require("dojo.json");
+	var newFormSource = {"111111":"北京","555555":"杭州","666666":"深圳","777777":"厦门"};
 // --></script></body>
 
             <a href="javascript:sel.formAdds(newFormSource)">增加</a><br/>
