--- a/src/test/resources/corner/selectBox/test_select.html
+++ b/src/test/resources/corner/selectBox/test_select.html
@@ -55,7 +55,8 @@ djConfig = { isDebug: true };
 <!--
 	dojo.require("dojo.json");
 	var newFormSource = {"111111":"北京","555555":"杭州","666666":"深圳","777777":"厦门"};
-// --></script></body>
+// -->
+</script>
 
             <a href="javascript:sel.formAdds(newFormSource)">增加</a><br/>
             <input type="submit" />
