--- a/src/test/resources/corner/selectBox/test_selectAutoEva.html
+++ b/src/test/resources/corner/selectBox/test_selectAutoEva.html
@@ -70,7 +70,7 @@ field 1 <input id="CustomIdField" name="CustomIdField"	type="text" />
 	var sel = new SelectBox('Aform','possible','chosen',{"111111":"北京","222222":"上海","333333":"广州","444444":"武汉"},{});
 	CustomIdField_AC = ac.createAjaxAutocompleter("CustomIdFieldcomplete", "CustomIdField", "../autocompleter/test.txt", "auto_complete", 0.2,{select:'selectme',afterUpdateElement:ac.evaluate},"../../../../main/java//corner/orm/tapestry/component/prototype/autocompleter/indicator.gif","");
 	
-	ajaxRes = new AjaxResponse("test.txt","test/page");
+	ajaxRes = new AjaxPageResponse("test.txt","test/page");
 	
 	dojo.event.connect("after",CustomIdField_AC,"updateElement",this,"updateFromSource");
 	updateFromSource=function(){
