修理js 调试页面
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@4281 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/gain/test_gainPointRunComponent.html
+++ b/src/test/resources/corner/gain/test_gainPointRunComponent.html
@@ -34,13 +34,14 @@
 
 <SCRIPT LANGUAGE="JavaScript">
 <!--
-
-djConfig = { isDebug: true
+djConfig = { isDebug: true,
+               baseRelativePath: "../../../../main/js/dojo",
+               preventBackButtonFix: false,
+               parseWidgets: false
           };
-
 //-->
-
 </SCRIPT>
+
 <SCRIPT LANGUAGE="JavaScript" src="../../../../main/js/dojo/dojo.js"></script>
 <SCRIPT LANGUAGE="JavaScript" src="../../../../main/js/corner/corner.js"></script>
 <SCRIPT LANGUAGE="JavaScript" src="../../../../main/js/tapestry/core.js"></script>
@@ -158,6 +159,11 @@ function aaa(){
 }
 
 //-->
+</script>
+
+<script type="text/javascript">
+dojo.require("dojo.html.iframe");
+dojo.require("dojo.html.layout");
 </script>
 
 <script type="text/javascript">
