--- a/src/test/resources/corner/window/tree/testTree.html
+++ b/src/test/resources/corner/window/tree/testTree.html
@@ -74,6 +74,11 @@ function selectRecordShow(obj){
 //-->
 </script>
 
+<script type="text/javascript">
+dojo.require("dojo.html.iframe");
+dojo.require("dojo.html.layout");
+</script>
+
 <script type="text/javascript"><!--
 
 new LeftTreeDialog($("pwin_winDialog_button"),{"id":"generated","className":"alphacube","title":"google",
