增加树 ? 测试
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@4286 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/window/tree/frameMainTree.html
+++ b/src/test/resources/corner/window/tree/frameMainTree.html
@@ -37,7 +37,7 @@ djConfig = { isDebug: true,
 
 <script type="text/javascript">
 <!--
-		var tree = new PageTree("parent","testPage.txt","My Tree","mainFrame","com.bbb","trunValue.html","");
+		var tree = new PageTree("parent","testPage.txt","My Tree","mainFrame","com.bbb","trunValue.html?appstate:Administration/AssetManage/AssetPurchaseList=BrO0ABXcNAAAAAQAABm1lbnVJZHQAIDI4MjgyOGMxMWM5Mjk3ZDcwMTFjOTI5ODE1YTEwZDBi","");
 		enableAjaxDebug();
 //-->
 </script>
