--- a/src/test/resources/corner/validate/test_isReletiveFieldNotNull.html
+++ b/src/test/resources/corner/validate/test_isReletiveFieldNotNull.html
@@ -26,7 +26,7 @@ dojo.require("corner.validate.web");
 
 dojo.event.connect(dojo.byId("num"),"onchange",this,"val");
 val=function(evt){
-	dojo.debug(corner.validate.isFieldPlusEq(
+	dojo.debug(corner.validate.isReletiveFieldNotNull(
 	dojo.byId("num").value,{"fields":["field1","field2","field3"]}));
 }
 	
