--- a/src/test/resources/corner/window/multiValue/values.html
+++ b/src/test/resources/corner/window/multiValue/values.html
@@ -39,27 +39,27 @@ djConfig = { isDebug: true,
 		parent.selectRecord(queryBox.maps.values());
 	}
 	
-	test=function(evt){
+	loadCheckBox=function(evt){
 		dojo.debug("test111" );
 		
 		try{
-		 if(!queryBox){
-			dojo.debug("interval");
-			window.setInterval("test()",1000);
-			return;
-			}
+		    queryBox.maps;
+			
 		}catch(e){
+			
 			dojo.debug(e);
+			dojo.debug("interval");
+			window.setInterval("loadCheckBox()",1000);
+			return;
 		}
 	 
-	  dojo.debug("test" );
 	}
 	
 	dojo.event.connect(dojo.byId("MultiCBToStringSelectedField"),"onclick","winSelectRecord");
 	dojo.event.connect(dojo.byId("t2"),"onclick","winSelectRecord");
 	dojo.event.connect(dojo.byId("t3"),"onclick","winSelectRecord");
 	
-	dojo.event.connect("after",window,"onload","test");
+	dojo.event.connect("after",window,"onload","loadCheckBox");
 //-->
 </script>
 	</body>
