wap协议增删改测试建立。。
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@4386 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/WEB-INF/DemoBorder.html
+++ b/src/main/webapp/WEB-INF/DemoBorder.html
@@ -1,6 +1,4 @@
-<html jwcid="shell" 
-	  
-	  >
+<html jwcid="shell">
 <body leftmargin="0" topmargin="0" rightmargin="0" bottommargin="0" jwcid="@Body">
 <span jwcid="@Script" script="/scripts/Corner.script"/>
 <span jwcid="@RenderBody"/>
