增加了关闭窗口时的callback能力
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@4391 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/window/test_popTestField.html
+++ b/src/test/resources/corner/window/test_popTestField.html
@@ -82,6 +82,7 @@ test1=function(){
 var pwin_winDialog;
 
 function ddd(){
+	var aaa = 100;
    if(!pwin_winDialog){
 					   								   
    pwin_winDialog = new Window('pwin_winDialog',{"id":"generated","className":"alphacube","title":"google",
