修正了WindowqueryDialog在closeCallback函数的bug
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@4412 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/window/test_win.html
+++ b/src/test/resources/corner/window/test_win.html
@@ -169,7 +169,11 @@ function aaa(){
 									   "draggable":"true","showEffectOptions":"none","hideEffectOptions":"none","effectOptions":"none",
 									   "opacity":1,"recenterAuto":"true","gridX":1,"gridY":1,"wiredDrag":"false",
 									   "destroyOnClose":"false","all callbacks":"none"},"selectRecord","queryDialogLoad",true,"test","aaa");
-	
+
+//test closeCallback
+var closeCallback = function(){
+	dojo.debug('i am callback');
+}	
 // --></script></body>
 </html>
 <!-- Render time: ~ 922 ms -->
