git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@4449 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/gain/test_gainPoint.html
+++ b/src/test/resources/corner/gain/test_gainPoint.html
@@ -33,6 +33,7 @@ djConfig = { isDebug: true
 			</td>
 			<td>
 				field 2 <input type="text" name="cnName" value="bbbbbb" />
+				<input type="hidden" name="hid" value="11111111111111111111111111111"	/>
 			</td>
             <td>
 				field 3 <input name="show_check" type="checkbox" value="" onclick="checkHidField('show',this)" />
