git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@4468 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/widget/test_ShowDialog.html
+++ b/src/test/resources/corner/widget/test_ShowDialog.html
@@ -45,7 +45,7 @@ form {
 <div id="errorMessage">
     <div class="alertDialog">
     <div class="alertContent">
-    <div>
+    <div id="msg">
     域名不唯一请修改后重新审核
         </div>           
     <input type="button" onClick="dojo.widget.byId('errorMessage').hide();return false" value="Close"/>
